--- a/confs/main.conf
+++ b/confs/main.conf
@@ -3,13 +3,12 @@
 
 auto_push="yes"                                 ## yes / no ##
 email_alert="Yes"                               ## yes / no ##
-admin_email="admin@example.com"          	## Valid Email of Admin FOr DeployMent Failures ##
+admin_email="admin@example.com"          	## Valid Email of Admin For DeployMent Failures ##
 
 timer="3"                                       ## Deployment Sleep ##
 webuser="www-data"                              ## apache for RHEL & www-data for debian based distros ##
 
-
-## Service Map Array Syntax ##
-## git[linux_user]="git_branch:working_copy"
-
+## Service Map Array Syntax Example ##
+## git[0]="git_branch:working_copy:owner_user"
+## git[1]="dev:/home/foouser/html:foouser"
 
