--- a/confs/main.conf
+++ b/confs/main.conf
@@ -1,13 +1,13 @@
 ## Main Config ##
 
-auto_push="yes"                                 ## yes / no ##
-email_alert="Yes"                               ## yes / no ##
-admin_email="admin@example.com"          	    ## Valid Email of Admin For DeployMent Failures ##
+auto_push="yes"                                ## yes / no ## Auto-Commit+Push Server Changes to git
+email_alert="no"                               ## yes / no ## mailutils/sendmail required
+admin_email="admin@example.com"          	     ## Valid Email of Admin For DeployMent Failures ##
 
-timer="3"                                       ## Deployment Sleep ##
+timer="3"                                       ## Deployment Sleep Interval ##
 webuser="www-data"                              ## apache for RHEL & www-data for debian based distros ##
 
-## Service Map Array Syntax Example ##
+## Service Map Array ## Syntax ##
 ## git[0]="git_branch:working_copy:owner_user"
-## git[1]="dev:/home/foouser/html:foouser"
-
+## Example ##
+## git[1]="devbranch:/home/foouser/public_html:foouser"
