Deploytool renamed to vanilla deploy

--- a/confs/logrotate.conf
+++ b/confs/logrotate.conf
@@ -1,6 +1,6 @@
-## DeployTool by Tech-Alchemist ##
+## vanilla Deploy by EchtOps ##
 
-/var/log/deploy/deploy.log {
+/var/log/echtops/vanilla-deploy.log {
   rotate 30
   size 10M
   compress
