--- a/confs/main.conf
+++ b/confs/main.conf
@@ -1,13 +1,17 @@
+## Vanilla Deploy by EchtOps ##
 ## Main Config ##
 
-auto_push="yes"                                ## yes / no ## Auto-Commit+Push Server Changes to git
-email_alert="no"                               ## yes / no ## mailutils/sendmail required
-admin_email="admin@example.com"          	     ## Valid Email of Admin For DeployMent Failures ##
+auto_push="yes"                                 ## yes / no ## Should server Auto-Commit & Push the manual Server end Changes to git or not
+email_alert="no"                                ## yes / no ## mailutils/sendmail required 
+admin_email="admin@example.com"          	    ## Valid Email of Admin For reporting DeployMent Failures ##
 
-timer="3"                                       ## Deployment Sleep Interval ##
-webuser="www-data"                              ## apache for RHEL & www-data for debian based distros ##
+timer="3"                                       ## Auto Pull Sleep Interval ##
+webuser="www-data"                              ## "apache" for RHEL & "www-data" for ubuntu based distros ##
 
-## Service Map Array ## Syntax ##
-## git[0]="git_branch:working_copy:owner_user"
+## Consecutive Repos Configuration ## Keep Exact Syntax ##
+## git[0]="git_branch:Project_Directory:Project_Linux_User"
+
 ## Example ##
-## git[1]="devbranch:/home/foouser/public_html:foouser"
+## git[0]="master:/home/TOM/public_html:TOM"
+## git[1]="staging:/home/JERRY/frontend:JERRY"
+
